# pi_robot

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  sample_config.yaml
pi_robot/: brain.py  command_handler.py  controller.py  ears.py  eyebrows.py  eyes.py  logging.py  mouth.py  movement.py  prefrontal_cortex.py  robot.py  simple_robot.py
