[project]
name = "pi-robot"
version = "0.1.0"
description = ""
authors = [
    {name = "jimming"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.10"
dependencies = [
    "openai[realtime] (>=1.63.0,<2.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "gpiozero (>=2.0.1,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.1"
types-pyaudio = "^0.2.16.20240516"
scipy-stubs = "^1.15.2.0"

